# giverny

./: .dockerignore  .env.example  .gitignore  README.md  compose.yml  giverny.toml  pyproject.toml  requirements.txt  set-password
docs/: architecture.md  deploying-a-repo.md
edge/caddy/: Caddyfile
edge/daemon/: Dockerfile
giverny/: __main__.py  api.py  caddy.py  compose.py  config.py  daemon.py  discovery.py  dockerapi.py  edge.py  git.py  github.py  state.py
services/dashboard/: docker-compose.yml
services/dashboard/web/: Dockerfile  package-lock.json  package.json
services/dashboard/web/app/: actions.ts  layout.tsx  page.tsx
services/dashboard/web/app/components/: LogDrawer.tsx  SubmitButton.tsx
services/dashboard/web/app/lib/: api.ts
services/example/: docker-compose.yml
services/example/web/: Dockerfile  default.conf  index.html
